==> nameless1379/rplidar_3d/embedded/dev/tft_display.c <==
#include "ch.h"
#include "hal.h"
#include "tft_display.h"
#include "chprintf.h"
#include "memstreams.h"

void tft_write_command(uint8_t command)
{
	palClearPad(TFT_DC_PORT, TFT_DC_PIN);

  spiAcquireBus(TFT_SPI);
  spiSelect(TFT_SPI);
  spiSend(TFT_SPI, 1, &command);
  spiUnselect(TFT_SPI);
  spiReleaseBus(TFT_SPI);
}

void tft_write_data(uint8_t data)
{
	palSetPad(TFT_DC_PORT, TFT_DC_PIN);

  spiAcquireBus(TFT_SPI);
  spiSelect(TFT_SPI);
  spiSend(TFT_SPI, 1, &data);
  spiUnselect(TFT_SPI);
  spiReleaseBus(TFT_SPI);
}

void tft_reset(void)
{
 	palClearPad(TFT_RST_PORT, TFT_RST_PIN);
	chThdSleepMilliseconds(1);
	palSetPad(TFT_RST_PORT, TFT_RST_PIN);
	chThdSleepMilliseconds(1);
}
